fixed some spacing issues on smaller devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,10 @@ html, body {
     color: #fafafa;
 }
 
+/* .sidenav-trigger {
+    display: none;
+} */
+
 h1{
     font-size: 35px;
     margin-top: 10px;
@@ -221,7 +225,14 @@ input:not([type]):disabled, input:not([type])[readonly="readonly"], input[type=t
     color: #fafafa;
 }
 
+header {
+    padding: 20px 0;
+}
 
+/* Control visibility of the hamburger menu */
+.sidenav-trigger {
+    display: none;
+}
 
 /****************************Media Queries**************************/
 
@@ -238,14 +249,43 @@ input:not([type]):disabled, input:not([type])[readonly="readonly"], input[type=t
     } 
 }
 
+@media (max-width: 1140px) {
+
+    .sidenav-trigger {
+        display: block;
+    }
+
+    /* Ensure the sidenav (fixed sidebar) is hidden */
+    .sidenav-fixed {
+        display: none;
+    }
+}
+
 @media (max-width: 600px) {
 
-    .container {
+    .container.index-page {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .container.index-page .col {
         width: 100%;
-        max-width: 100%;
-        margin: 0 auto;
-        padding: 0 15px;
-        box-sizing: border-box;
+    }
+
+    .home-img {
+        margin-bottom: 20px; /* Add space below the image */
+    }
+
+    .btn {
+        width: 100%; /* Make buttons full-width */
+        margin-bottom: 10px; /* Add space between buttons */
+    }
+
+    .btn.right {
+        float: none; /* Ensure the buttons are stacked */
     }
 
     h1 {
@@ -381,13 +421,47 @@ input:not([type]):disabled, input:not([type])[readonly="readonly"], input[type=t
 
 @media (max-width: 459px) {
     .card-wrapper {
-        flex: 0 1 calc(50% - 20px);
-        max-width: calc(50% - 20px);
+        flex: 1 1 calc(33.333% - 10px); 
+        max-width: calc(33.333% - 10px); 
+        margin: 5px; 
+    }
+
+    .card-container {
+        display: flex;
+        justify-content: space-between; 
+        flex-wrap: nowrap; 
+        gap: 5px; 
+    }
+}
+
+
+@media (max-width: 339px) {
+    
+    .card {
+        width: 80px;
+        height: 200px; 
+    }
+    
+    .card-wrapper {
+        flex: 0 1 100%;
+        max-width: 100%;
     }
 }
 
 @media only screen and (min-width: 601px) {
     .show-on-medium-and-up {
         display: block !important;
+    }
+}
+
+@media (min-width: 1140px) {
+    .sidenav-fixed {
+        display: block;
+    }
+}
+
+@media (min-width: 993px) and (max-width: 1010px) {
+    .input-field label {
+        font-size: 12px; 
     }
 }
